Fix: Alignment of the checkbox for select was wrong in Boostrap 4 and Semantic UI tables
DD-1456

Sync to source repo @49e583841acab83c8e388381a09b1d5a50670491

--- a/css/select.semanticui.css
+++ b/css/select.semanticui.css
@@ -77,7 +77,7 @@ table.dataTable tbody th.select-checkbox:after {
 table.dataTable tbody td.select-checkbox:before,
 table.dataTable tbody th.select-checkbox:before {
   content: ' ';
-  margin-top: -6px;
+  margin-top: -3px;
   margin-left: -6px;
   border: 1px solid black;
   border-radius: 3px;
